# silicium

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yaml
silicium/: setup.cfg
silicium/src/silicium/: actions.py  builder.py
silicium/tests/: test_test.py
silicium_web/: LICENSE  setup.cfg  tox.ini
silicium_web/src/: main.py
silicium_web/src/silicium_web/lang/: __init__.py
silicium_web/src/silicium_web/lang/js/: js_component.py
silicium_web/src/silicium_web/lang/js/stubs/: onclick.silicium.js  update.silicium.js
silicium_web/tests/: test_test.py
src/: main.py
src/silicium/: __init__.py  builder.py  bundle.py  component.py  scene.py  vars.py
src/silicium/utils/: __init__.py  require.py
src/silicium_web/: README.md
src/silicium_web/lang/css/: __init__.py  default.css  default.py  optimizer.py  themes.css
src/silicium_web/lang/html/: __init__.py  actions.py  builder.py  button.py  html.py  navbar.py  text.py
src/silicium_web/lang/html/templates/: index.html
src/silicium_web/lang/js/: modify-data.silicium.js  onclick.silicium.js
tests/: __init__.py  test_test.py
