[metadata]
name = Silicium
description = Make fully flexible webapps in Python.
author = SamimiesGames
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9

[options]
packages =
    silicium
install_requires =
python_requires = >=3.9
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    tox>=3.24

[options.package_data]
silicium = py.typed
